# KineIntra

./: .env  .envrc  .gitignore  00_START_HERE.md  COMPLETION_SUMMARY.py  DOCUMENTATION_INDEX.md  PROTOCOL.md  PYQT_APP_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SETUP.md  experiment_analyzer.py  main.py  pyproject.toml  requirements.txt  run_app.py
data_processing/: delete_hioki_metadata.py
data_processing/exp_13_12/: base line.xlsx  baseline.csv
deprecated/ui (currently dont touch)/: examples.py  pyqt_app.py
docs/: CLI.md
docs/graphs/: 01-BlockDiagram.md  02-UseCaseDiagram.md  03-Flowcharts.md  04-SequenceDiagrams.md  05-StateDiagram.md  06-ClassDiagram.md  README.md
docs/system/: ARCHITECTURE.md
docs/thesis/: 01-Abstract.md  02-Introduction.md  03-RelatedWork.md  04-SystemOverview.md  05-Protocol.md  06-DeviceFirmware.md  07-HostSoftware.md  08-DataProcessing.md  09-TestingAndValidation.md  10-Results.md  11-Discussion.md  12-Conclusion.md  Appendix-A-Setup.md  Appendix-B-CLI-Reference.md  Appendix-C-Glossary.md  OUTLINE.md
kineintra/: cli.py  example_device_controller.py
kineintra/FSR_signal/: MULTI_SENSOR_IMPLEMENTATION.md  QUICKSTART.md  adc_signal.py  calibrator_example.py  instructions.md  instructions_updated.md  multi_sensor_example.py  test_calibrator.py
protocol/: config.py  frame_maker_api.py  packet_maker.py  packet_reader.py  protocol_parser.py  serial_connection.py
tests/: __init__.py  test_packet_parser_roundtrip.py  test_protocol.py  test_serial_virtual.py  virtual_port.py
ui/: __init__.py  examples.py  pyqt_app.py
(+120 files in other folders)
