
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biomechanics-microprocessor"
version = "0.1.0"
description = "PyQt6 GUI application for BioMechanics Microprocessor control"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyserial>=3.5", "PyQt6>=6.6.0"]

[project.scripts]
kineintra-cli = "kineintra.cli:main"
kineintra-host = "kineintra.host_client_cli:main"
kineintra-gui = "kineintra.gui.main_window:main"
kineintra-server = "kineintra.virtual.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kineintra*"]
exclude = ["data_processing*", "tests*"]
